<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskFlow</string>
    <string name="home_title">Главная</string>
    <string name="schedule_title">Расписание</string>
    <string name="calendar_title">Календарь</string>
    <string name="profile_title">Профиль</string>
    <string name="welcome_default">Добро пожаловать, Name!</string>
    <string name="add_event">Добавить</string>
    <string name="delete_event">Удалить событие</string>
    <string name="prev_month">Предыдущий месяц</string>
    <string name="next_month">Следующий месяц</string>
    <string name="avatar">Аватар</string>
    <string name="change_photo">Изменить фото</string>
    <string name="name_hint">Имя</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Телефон</string>
    <string name="bio_hint">О себе</string>
    <string name="save_profile">Сохранить</string>
</resources>
